--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "bienesraices",
+  "name": "salon-php-sass",
   "version": "1.0.0",
-  "description": "Curso Desarrollo Web Completo",
-  "main": "gulpfile.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "gulp"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Juan De La Torre",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cssnano": "^5.1.0",
+    "cssnano": "^5.1.15",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-cache": "^1.1.3",
@@ -17,13 +17,12 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^4.0.0",
-    "gulp-postcss": "^9.0.1",
+    "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser-js": "^5.2.2",
     "gulp-webp": "^4.0.1",
-    "sass": "^1.49.9",
-    "terser": "^4.8.0"
+    "terser": "^4.8.1"
   }
 }
